--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <td>Michael Jordan</td>
     </tr>
   </table>
-  <a href="hobbies.html">Honorable Mentions</a> <br>
+  <a href="Hobbies.html">Honorable Mentions</a> <br>
   <a href="Contact.html">Contact me..</a>
 <hr>
   <h3>Skills</h3>
